<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps</string>
    <string name="main_button_width">200dp</string>
    <string name="main_button_top_margin">24dp</string>

    <string name="btn1_title">SPOTIFY STREAMER</string>
    <string name="btn2_title">SCORES APP</string>
    <string name="btn3_title">LIBRARY APP</string>
    <string name="btn4_title">BUILD IT BIGGER</string>
    <string name="btn5_title">XYZ READER</string>
    <string name="btn6_title">CAPSTone: My Own App</string>


</resources>
