<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:text="@string/btn1_title"
        android:id="@+id/button1"
        android:background="@color/brown"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:text="@string/btn2_title"
        android:id="@+id/button2"
        android:background="@color/brown"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:text="@string/btn3_title"
        android:id="@+id/button3"
        android:background="@color/brown"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/btn4_title"
        android:id="@+id/button4"
        android:background="@color/brown"
        android:layout_below="@+id/button3"  />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/btn5_title"
        android:id="@+id/button5"
        android:background="@color/brown"
        android:layout_below="@+id/button4" />

    <Button
        android:layout_width="@dimen/main_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_button_top_margin"
        android:text="@string/btn6_title"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:textColor="#fffffcf8"
        android:background="@color/red"
        android:onClick="sendMessage"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
